--- a/css/index.css
+++ b/css/index.css
@@ -5,17 +5,31 @@ body{
     object-fit: cover;
     position: relative;
 }
-.container-bar {
-    display: flex;
-    Flex-direction: row ;
-    padding: 25px;
-    /*flex-wrap: nowrap ;*/
-    margin: -10px -10px 0 -10px;
-    background-color: rgba(0, 0, 0, 0.88);
-}
+
 h1 {
     text-decoration: underline;
 }
+
+.container-bar {
+    display: flex;
+    Flex-direction: row ;
+    margin: -10px -10px 0 -10px;
+    background-color: rgba(0, 0, 0, 0.88);
+    align-items: center;
+}
+
+#logo1{
+    margin: auto;
+    padding: 0.5% 10% 0.75% 0;
+}
+
+.title{
+    text-align: center;
+    color: #00aced;
+    font-family: Serif;
+    font-size: 30px;
+}
+
 
 ul.a {
     list-style-type: square;
@@ -44,12 +58,6 @@ ul.a {
     margin-bottom: 5px;
 }
 
-#logo2{
-    display: flex;
-    flex-direction: column;
-    padding-left: 39%;
-    border-radius: 50px;
-}
 
 #borderButton{
     display: flex;
@@ -133,6 +141,7 @@ ul.a {
     font-style: italic;
 }
 
+/*start give us a call bar*/
 .contactWay{
     display: flex;
     Flex-direction: column ;
@@ -142,6 +151,11 @@ ul.a {
     padding-bottom: 1%;
     margin: -10px -10px 0 -10px;
 }
+
+#phone-num{
+    margin-right: 1.5%;
+}
+/*end give us a call bar*/
 
 #moveText{
     padding-left: 2%;
